fix illustration z-indexing

--- a/src/css/views/home.css
+++ b/src/css/views/home.css
@@ -1,6 +1,7 @@
 .home__illus-wrapper {
   @apply relative -mr-4 overflow-hidden;
   height: 300px;
+  z-index: -1;
 }
 
 .home__illus {
